# NucleiSky

./: README.md  construct.yaml  environment.yaml  pyproject.toml  requirements.txt  requirements_gpu.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: publish_to_pypi.yml
.template_sync/: manifest.yaml
.template_sync/migrations/: v0_1_5_to_v0_1_6.py
.tools/docs/: README.md  download_executable.md  external_code_upload.md
.tools/meta/: src_change.yaml
.tools/python/: bump_constructor.py  bump_version.py  merge_requirements.py
.tools/templates/: Welcome_template.ipynb  download_executable_template.md
app/bash_bat_scripts/: post_install.bat  post_install.sh  pre_uninstall.bat  pre_uninstall.sh  uninstall.sh
app/logo/: Gemini_Generated_Image_kc5ezfkc5ezfkc5e.icns
app/menuinst/: Welcome.ipynb  notebook_launcher.json
docs/: DOCUMENTATION_AUDIT.md  exports.md  index.md  installation.md  limitations.md  qc.md  segmentation.md  troubleshooting.md
docs/2D/: api.md  data_preparation.md  matchers.md  workflow.md
docs/3D/: api.md  data_preparation.md  matchers.md  workflow.md
docs/smart_microscopy/: smart_microscopy.md
docs/smart_microscopy/assets/: GA3_HTML.html  JOBS_HTML.html
notebooks/: README.md  notebook_latest_versions.yaml
notebooks/NucleiSky2DApp/: CHANGELOG.md  NucleiSky2DApp.ipynb  requirements.yaml
notebooks/NucleiSky2DBenchmarking/: CHANGELOG.md  NucleiSky2DBenchmarking.ipynb  requirements.yaml
notebooks/NucleiSky2D_API_Workflow_Example/: CHANGELOG.md  NucleiSky2D_API_Workflow_Example.ipynb
notebooks/NucleiSky3DApp/: CHANGELOG.md  NucleiSky3DApp.ipynb  requirements.yaml
notebooks/NucleiSky3DBenchmarking/: CHANGELOG.md  NucleiSky3DBenchmarking.ipynb  requirements.yaml
notebooks/NucleiSky3D_API_Workflow_Example/: CHANGELOG.md  NucleiSky3D_API_Workflow_Example.ipynb  requirements.yaml
smart_microscopy/: GA3_Python.py  NucleiSky_GA3.ga3  PythonScript.py  PythonScript1.py
src/nucleisky/: __init__.py
src/nucleisky/nucleisky2d/: __init__.py  config.py  demo_utils.py  export.py  features.py  io.py  pipeline.py  preprocess.py  segmentation.py  types.py  utils.py  visualization.py
src/nucleisky/nucleisky2d/matching/: __init__.py  geometry.py  graph.py  hashing.py  quad.py  triangle.py
src/nucleisky/nucleisky3d/: __init__.py  config.py  demo_utils.py  export.py  features.py  io.py  pipeline.py  preprocess.py  segmentation.py  types.py  utils.py  visualization.py
src/nucleisky/nucleisky3d/matching/: __init__.py  geometry.py  hashing3d.py  pyramid.py
src/nucleisky2d/: __init__.py  segmentation.py
src/nucleisky3d/: __init__.py
tests/: artifact_consistency.py  geometry_synth.py  test_api_and_pyramid_config_3d.py  test_demo_utils3d.py  test_export2d_inspect_image_header.py  test_export3d.py  test_features3d.py  test_geometry3d_bbox.py  test_geometry_metamorphic_phase2.py  test_geometry_regression_phase1_2d.py  test_geometry_regression_phase1_3d.py  test_hashing3d_config.py  test_hashing3d_min_inliers.py  test_io2d_save_json_serialization.py  test_io3d_load_transforms_any.py  test_io3d_require_voxel_size_um_zyx.py  test_io3d_save_tiff_zyx.py  test_io3d_volume_loading_channels.py  test_metadata_phase1.py  test_optional_imports.py  test_phase10_serialization_compatibility.py  test_phase12_2d_jsonl_strict_mode.py  test_phase13a_segmentation_warning_cleanup.py  test_phase13b_3d_false_positive_guards.py  test_phase3_integration_and_roundtrip.py  test_phase3_matcher_comparison_and_perf.py  test_phase4_roundtrip_schema_matcher_optional_qc.py  test_phase5_optional_matrix_stress_and_export_failures.py  test_phase6_byom_bounds_and_failure_modes.py  test_phase7_cross_artifact_and_minsize.py  test_phase8_artifact_helpers_and_unit_invariants.py  test_phase9_public_api_docs_notebook_smoke.py  test_pipeline2d_requires_2d_images.py  test_pipeline3d.py  test_pipeline3d_bbox_grid_consistency.py  test_pipeline3d_centroids_from_df.py  test_pipeline3d_sanitization.py  test_pipeline3d_transforms_jsonl.py  test_preprocess3d.py  test_rotation_angle_constraints_3d.py  (+4 more)
