
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleisky"
version = "0.2.0"
description = "Constellation-based point-set registration utilities for microscopy in 2D and 3D"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.2",
  "numba>=0.60.0",
  "scipy>=1.16.3",
  "scikit-image>=0.26.0",
  "tifffile>=2026.1.28",
  "networkx>=3.1",
  "pandas>=2.2.2",
  "matplotlib>=3.10.0",
]

[project.optional-dependencies]
segmentation = [
  "cellpose[all]",
  "instanseg-torch==0.1.1",
]
zarr = [
  "zarr",
  "numcodecs",
]
instanseg = [
  "instanseg-torch==0.1.1",
  "torch",
]
simpleitk = [
  "SimpleITK",
]
notebooks = [
  "ipywidgets>=8.1",
  "jupyterlab>=4.4",
  "nbformat>=5.10",
  "seaborn>=0.13",
  "tqdm>=4.67",
  "PyYAML>=6.0",
  "requests>=2.32",
]
all = [
  "cellpose[all]",
  "zarr",
  "numcodecs",
  "torch",
  "SimpleITK",
  "instanseg-torch==0.1.1",
  "ipywidgets>=8.1",
  "jupyterlab>=4.4",
  "nbformat>=5.10",
  "seaborn>=0.13",
  "tqdm>=4.67",
  "PyYAML>=6.0",
  "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/cellmigrationlab/NucleiSky"
Issues = "https://github.com/cellmigrationlab/NucleiSky/issues"
Documentation = "https://github.com/cellmigrationlab/NucleiSky/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "geometry: numerical geometric regression tests",
  "integration: multi-component workflow tests",
  "slow: slower tests not intended for tight loops",
  "stochastic: tests validating seeded stochastic behavior",
  "optional_backend: requires optional dependency/backend",
]
